feat: implement button Fill Bucket

--- a/palette/scss/base.scss
+++ b/palette/scss/base.scss
@@ -79,16 +79,16 @@ main{
     border-radius: 100%;
 }
 .circle-color{
-    background: gray;
+    background-color: rgb(128, 128, 128);
 }
 .circle-prev-color{
-    background: greenyellow;
+    background-color: greenyellow;
 }
 .circle-user-color1{
-    background: red;
+    background-color: red;
 }
 .circle-user-color2{
-    background: rgb(129, 150, 255);
+    background-color: rgb(129, 150, 255);
 }
 
 .section__canvas{
