--- a/palette/scss/base.scss
+++ b/palette/scss/base.scss
@@ -1,3 +1,4 @@
+
 body{
     margin: 0;
     padding: 0;
@@ -6,6 +7,8 @@ body{
 }
 main{
     display: flex;
+    margin-top: 25px;
+    background-color: white;
 }
 .header{
     width: 100%;
@@ -18,6 +21,7 @@ main{
     display: flex;
     align-items: center;
     height: 48px;
+    background-color: white;
 }
 .nav-icon{
     margin: 3%;
@@ -30,13 +34,16 @@ main{
     display: flex;
     justify-content: flex-end;
     width: 70.2vw;
+    background-color: white;
 }
 .button-control{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 650px;
+    height: 600px;
     margin-left: 4%;
+    padding-top: 25px;
+    background: white;
 }
 .button-group-vertical{
     display: flex;
@@ -46,6 +53,7 @@ main{
     -webkit-box-shadow: -1px 6px 10px -2px rgba(0,0,0,0.5);
     -moz-box-shadow: -1px 6px 10px -2px rgba(0,0,0,0.5);
     box-shadow: -1px 6px 10px -2px rgba(0,0,0,0.5);
+    background-color: white;
 }
 .button{
     display: flex;
@@ -79,7 +87,7 @@ main{
     border-radius: 100%;
 }
 .circle-color{
-    background-color: rgb(128, 128, 128);
+    background-color: rgb(251, 255, 0);
 }
 .circle-prev-color{
     background-color: greenyellow;
@@ -108,4 +116,7 @@ main{
 }
 .isActive__button{
     background-color: rgba(0,0,0,0.05);
+}
+.h1{
+    color: black;
 }
