--- a/palette/scss/base.scss
+++ b/palette/scss/base.scss
@@ -8,7 +8,7 @@ body{
 main{
     display: flex;
     margin-top: 25px;
-    background-color: white;
+    //background-color: white;
 }
 .header{
     width: 100%;
@@ -119,4 +119,13 @@ main{
 }
 .h1{
     color: black;
+}
+#input__choose-color{
+    display: none;
+}
+.label__choose-color{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    width: 40px;
 }
