--- a/palette/scss/base.scss
+++ b/palette/scss/base.scss
@@ -1,4 +1,3 @@
-
 body{
     margin: 0;
     padding: 0;
@@ -8,7 +7,6 @@ body{
 main{
     display: flex;
     margin-top: 25px;
-    //background-color: white;
 }
 .header{
     width: 100%;
@@ -21,7 +19,7 @@ main{
     display: flex;
     align-items: center;
     height: 48px;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 1);
 }
 .nav-icon{
     margin: 3%;
@@ -34,7 +32,7 @@ main{
     display: flex;
     justify-content: flex-end;
     width: 70.2vw;
-    background-color: white;
+    background-color: rgba(255, 255, 255, 1);
 }
 .button-control{
     display: flex;
@@ -43,7 +41,7 @@ main{
     height: 600px;
     margin-left: 4%;
     padding-top: 25px;
-    background: white;
+    background: rgba(255, 255, 255, 1);
 }
 .button-group-vertical{
     display: flex;
@@ -53,7 +51,7 @@ main{
     -webkit-box-shadow: -1px 6px 10px -2px rgba(0,0,0,0.5);
     -moz-box-shadow: -1px 6px 10px -2px rgba(0,0,0,0.5);
     box-shadow: -1px 6px 10px -2px rgba(0,0,0,0.5);
-    background-color: white;
+    background-color:  rgba(255, 255, 255, 1);
 }
 .button{
     display: flex;
@@ -61,7 +59,7 @@ main{
     width: 228px;
     height: 48px;
     border: 0;
-    background-color: white;
+    background-color:  rgba(255, 255, 255, 1);
     &:hover{
         transform: scale(0.95);
     }
@@ -87,16 +85,16 @@ main{
     border-radius: 100%;
 }
 .circle-color{
-    background-color: rgb(251, 255, 0);
+    background-color: rgba(251, 255, 0, 1);
 }
 .circle-prev-color{
-    background-color: greenyellow;
+    background-color: rgba(172, 255, 47, 0.959);
 }
 .circle-user-color1{
-    background-color: red;
+    background-color: rgba(255, 0, 0, 1);
 }
 .circle-user-color2{
-    background-color: rgb(129, 150, 255);
+    background-color: rgba(129, 150, 255, 1);
 }
 
 .section__canvas{
@@ -118,9 +116,9 @@ main{
     background-color: rgba(0,0,0,0.05);
 }
 .h1{
-    color: black;
+    color: rgba(0, 0, 0, 0.993);
 }
-#input__choose-color{
+.input__choose-color{
     display: none;
 }
 .label__choose-color{
